# uds

./: .woodpecker.yml  Cargo.toml  README.md  RELEASES.md
.cargo/: config.toml
.github/workflows/: main.yml
.woodpecker/: build.yml
examples/: recv_ancillary.rs  recv_anclillary_std.rs
src/: addr.rs  ancillary.rs  ancillary_rust.rs  credentials.rs  helpers.rs  lib.rs  seqpacket.rs  traits.rs  windows_unixstream.rs
src/tokio/: seqpacket.rs
tests/: addr.rs  addr_win.rs  cloexec.rs  common.rs  credentials.rs  fd_passing.rs  incoming.rs  recv_vectored_with_ancillary.rs  seqpacket.rs  test_locally.sh  test_read_write.rs  win_unixstream.rs  xio.rs  xio_windows.rs
