[package]
name = "uds-fork"
version = "0.7.0"
description = """
A unix domain socket crate that supports abstract addresses, fd-passing, seqpacket and windows unix stream sockets.
"""
readme = "README.md"
repository = "https://github.com/eesekaj/uds"
license = "Apache-2.0 OR MIT"
authors = ["Torbjørn Birch Moltu <t.b.moltu@lyse.net>", "Aleksandr Morozov <alex@nixd.org>"]
keywords = ["unix", "socket", "seqpacket", "fdpassing", "windows"]
categories = ["os::unix-apis", "asynchronous"]
edition = "2024"
exclude = ["tests", "src/bin", ".vscode"]

[features]

default = ["mio", "xio-rs"]

[dependencies]
xio-rs = { version = "0.1.0-alpha.2", optional = true }

mio = { version = "1.1.1", features = ["os-ext", "net"], optional = true }

[target."cfg(unix)".dependencies]
libc = "~0.2"


[target.'cfg(windows)'.dependencies.windows-sys]
version = "~0.61"
features = [
  "Win32_Foundation",
  "Win32_Networking_WinSock",
  "Win32_System_IO",
]

[dev-dependencies]
xio-rs = { version = "0.1.0-alpha.2" }

[package.metadata.docs.rs]
features = ["mio", "xio"]