[package]
name = "uds-fork"
version = "0.9.0"
description = """
A unix domain socket crate that supports abstract addresses, fd-passing, seqpacket and windows unix stream sockets.
"""
readme = "README.md"
repository = "https://github.com/eesekaj/uds"
license = "Apache-2.0 OR MIT"
authors = ["Torbjørn Birch Moltu <t.b.moltu@lyse.net>", "Aleksandr Morozov <alex@nixd.org>"]
keywords = ["unix", "socket", "seqpacket", "fdpassing", "windows"]
categories = ["os::unix-apis", "asynchronous"]
edition = "2024"
exclude = ["tests", "src/bin", ".vscode"]

[features]

default = []

# enables unstable code
unsatable_preview = []

[dependencies]
xio-rs = { version = "0.1.0-alpha.3", optional = true } # MIT

[target."cfg(unix)".dependencies]
libc = "~0.2"
mio = { version = "~1.2", features = ["os-ext", "net"], optional = true }

[target.'cfg(windows)'.dependencies.windows-sys]
version = "~0.61"
features = [
  "Win32_Foundation",
  "Win32_Networking_WinSock",
  "Win32_System_IO",
]
[target.'cfg(windows)'.dependencies.tempfile]
version = "~3.27" 

[dev-dependencies]
xio-rs = { version = "0.1.0-alpha.3" } # MIT
tempfile = { version = "~3.27" }

[package.metadata.docs.rs]
# "mio" this is useless on windows and I don't have a local docs rs crap to test on my laptop, so I cannnot 
# reupload this to docsrs everytime. also remove GNU crp, leave the msvc
features = ["xio-rs", "unsatable_preview"] 
default-target = "x86_64-unknown-linux-gnu"
targets = [
  "x86_64-unknown-linux-gnu",
  "x86_64-unknown-freebsd",
  "x86_64-pc-windows-msvc",
]

# return this back after testing on local docsrs server
# "x86_64-unknown-dragonfly",
#   "x86_64-unknown-netbsd",
#   "x86_64-unknown-openbsd",

[[example]]
name = "recv_ancillary"
path = "examples/recv_ancillary.rs"
required-features = ["xio-rs"]

[[example]]
name = "recv_anclillary_std"
path = "examples/recv_anclillary_std.rs"
required-features = ["unsatable_preview"]
